<!--Utsav Sharma N01392141 Section C-->
<resources>
    <string name="app_name">Utsav Sharma N01392141</string>
    <string name="dominos">Dominos</string>
    <string name="piza_pizza">Piza Pizza</string>
    <string name="pizahut">PizaHut</string>

    <string name="nextButton">Next</string>

    <string name="toast_One">Please select atleast one</string>

    <string name="pizzaTypeTag">Pizza Type</string>
    <string name="pizzaType1">Cheese Pizza</string>
    <string name="pizzaType2">Veggie Pizza</string>
    <string name="pizzaType3">Pepperoni Pizza</string>
    <string name="pizzaType4">Supreme Pizza</string>
    <string name="pizzaType5">Meat Pizza</string>

    <string name="pizzaSizeTag">Pizza Size</string>

    <string name="pizzaSize1">Small</string>
    <string name="pizzaSize2">Medium</string>
    <string name="pizzaSize3">Large</string>
    <string name="pizzaSize4">Extra Large</string>

    <string name="pizzaToppingTag">Pizza Topping</string>

    <string name="toppingsTag">Toppings</string>
    <string name="topping1">Pineapple</string>
    <string name="topping2">Mushroom</string>
    <string name="topping3">Onions</string>
    <string name="topping4">Green Olives</string>
    <string name="topping5">Spinach</string>


    <string name="selectionToast">Please Select from the Pizza Type or Size or at least one Toppings</string>
    <string name="orderscreen">Order Screen</string>
    <string name="help_menu">Help</string>
    <string name="help_pizza">Pizza</string>
    <string name="menu3">Utsav Sharma. I like this app.</string>
    <string name="pizza_websitename">Pizza\'s website</string>


    <string name="nameHint">Enter Name</string>
    <string name="creditHint">Enter Credit Info</string>
    <string name="addHint">Enter Address</string>

    <string name="provinceTag">Province</string>
    <string-array name="province">
        <item>ON</item>
        <item>QC</item>
        <item>NS</item>
        <item>NB</item>
        <item>MB</item>
        <item>BC</item>
        <item>PE</item>
        <item>SK</item>
        <item>AB</item>
        <item>NL</item>
    </string-array>

    <string name="orderTag">Order</string>

    <string name="toast3">Please Fill the all details above correctly</string>

    <string name="nameTag">Name</string>
    <string name="addTag">Address</string>
    <string name="creditTag">Credit Card</string>
    <string name="checkOutBtnTag">Check out</string>

    <string name="endToast">Thank You for your order. We are preparing your order.</string>

    <string name="toastMsg">Your confirmation number is 12569 and your pickup time is 7 PM.</string>
    <string name="pizza_website">Help website</string>
    <string name="pizza_name1">dominos</string>
    <string name="pizza_name2">piza</string>
    <string name="pizza_name3">pizaHut</string>
    <string name="pzzanmextra">pizzaNm</string>
    <string name="imgid">imgId</string>
    <string name="case_pizza_name1">Dominos</string>
    <string name="case_pizza_name2">Piza Pizza</string>
    <string name="case_pizza_name3">PizzaHut</string>
    <string name="title_conform">Confirmation</string>
    <string name="name_dismiss">Dismiss</string>
    <string name="name_confirm_last">Confirm</string>
    <string name="screen4_title">Title</string>
    <string name="type_act2">type</string>
    <string name="size_act2">size</string>
    <string name="topp_act2">topp</string>
    <string name="uname_act2">uname</string>
    <string name="uaddr_act2">uaddr</string>
    <string name="ucredit_act2">ucredit</string>
    <string name="uprove_act2">uprov</string>
    <string name="order_act3">Order</string>
    <string name="type_act3">pizaType</string>
    <string name="size_act3">pizaSize</string>
    <string name="topp_act3">toppArr</string>
    <string name="nameedt_act3">Enter details</string>
    <string name="namedit2_act3">Enter details</string>
    <string name="nameedit3_act3">Enter details</string>
    <string name="ptype_act3">type</string>
    <string name="psize_act3">size</string>
    <string name="ptopp_act3">topp</string>
    <string name="uname_act3">uname</string>
    <string name="ucredit_act3">ucredit</string>
    <string name="uaddr_act3">uaddr</string>
    <string name="uprov_act3">uprov</string>
    <string name="pizzanm1_activity2">pizzaNm</string>
    <string name="pizzatype_activity2">pizaType</string>
    <string name="pizzasize_activity2">pizaSize</string>
    <string name="toppings1_activity2">toppArr</string>
    <string name="website1">https://food.ndtv.com/food-drinks/an-ultimate-guide-on-how-to-order-a-pizza-1905628</string>
    <string name="website2">https://www.dominos.ca/en/</string>
    <string name="exit_dialouge">Do you want to exit from the app?</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
</resources>