<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SharmaActivity4"
    android:background="@color/cream"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:textColor="#0C090A"
                    android:layout_weight="1"
                    android:text="@string/pizzaTypeTag"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/utsavPType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:textColor="#0C090A"
                    android:layout_weight="1"
                    android:text="@string/pizzaSizeTag"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/utsavPSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    />


            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:textColor="#0C090A"
                    android:layout_weight="1"
                    android:text="@string/pizzaToppingTag"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/utsavPTopp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    />


            </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textColor="#0C090A"
                android:layout_weight="1"
                android:text="@string/nameTag"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/utsavUname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textColor="#0C090A"
                android:layout_weight="1"
                android:text="@string/creditTag"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/utsavUcredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textColor="#0C090A"
                android:layout_weight="1"
                android:text="@string/addTag"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/utsavUadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />




        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textColor="#0C090A"
                android:layout_weight="1"
                android:text="@string/provinceTag"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/utsavUProvince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />




        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/utsavCheckTBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkOutBtnTag"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>