<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UtsavActivity"
    android:background="@color/cream"
    android:padding="10dp"
    android:orientation="vertical"
    android:theme="@style/Theme.UtsavAssign2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:id="@+id/utsavDomino"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="#eeeeee">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dominos"
                    android:textSize="40sp"
                    android:fontFamily="@font/varela_round"
                    android:layout_gravity="center_vertical"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/dominos"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="10dp"
            >

            <LinearLayout
                android:id="@+id/utsavPiza"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="#eeeeee">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/piza_pizza"
                    android:textSize="40sp"
                    android:fontFamily="@font/varela_round"
                    android:layout_gravity="center_vertical"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/piza"
                    android:layout_alignParentEnd="true"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            >

            <LinearLayout
                android:id="@+id/utsavPizahut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#eeeeee"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/varela_round"
                    android:text="@string/pizahut"
                    android:textSize="40sp" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/pizahut"

                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>



    <Button
        android:id="@+id/utsavNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>